# retrogames_backend_v2

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
core/: config.py
migrations/: env.py
migrations/versions/: 4cb1cef11f5a_init.py  b719cae5568e_init.py
src/: database.py  main.py  models.py
src/games/: models.py  router.py  schemas.py
src/migrations/: env.py  script.py.mako
