[tool.poetry]
name = "retrogames-backend-v2"
version = "0.1.0"
description = ""
authors = ["samuxyz <zaza.samuele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
